--- a/index.html
+++ b/index.html
@@ -1,30 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello Bulma!</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Hello D3!</title>
+  <style>
 
-<style>
+  </style>
+</head>
 
-</style>
-  </head>
-  <body>
-
-    <div class="buttons has-addons">
-      <span class="button">Yes</span>
-      <span class="button">Maybe</span>
-      <span class="button">No</span>
-    </div>
-    <div id="chart"></div>
-
-  </body>
-
+<body>
+  <div id="chart"></div>
+</body>
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="index.js"></script>
 
 </html>
-
-
