--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hello D3!</title>
   <style>
-
+    #nav{
+      margin-left: 100px;
+      margin-top: 50px;
+    }
   </style>
 </head>
 
 <body>
+  <div id="nav">
+      <button type="button">Click Me!</button>
+  </div>
   <div id="chart"></div>
 </body>
 <script src="https://d3js.org/d3.v5.min.js"></script>
