--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       margin-left: 100px;
       margin-top: 50px;
     }
+    #legend{
+      margin-left: 100px;
+      margin-top: 50px;
+    }
   </style>
 </head>
 
@@ -16,6 +20,7 @@
   <div id="nav">
       <button type="button">Click Me!</button>
   </div>
+  <div id="legend">Legende</div>
   <div id="chart"></div>
 </body>
 <script src="https://d3js.org/d3.v5.min.js"></script>
