--- a/index.html
+++ b/index.html
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hello D3!</title>
   <style>
-    #nav{
+    #nav {
       margin-left: 100px;
       margin-top: 50px;
     }
-    #legend{
-      margin-left: 100px;
-      margin-top: 50px;
+
+    #tooltip {
+      color: white;
+      position: absolute;
+      text-align: center;
+      width: 60px;
+      height: 28px;
+      padding: 2px;
+      font: 12px sans-serif;
+      background: rgba(0, 0, 0, .8);
+      border: 2px solid black;
+      pointer-events: none;
     }
   </style>
 </head>
 
 <body>
   <div id="nav">
-      <button type="button">Click Me!</button>
+    <button type="button">Click Me!</button>
   </div>
-  <div id="legend">Legende</div>
-  <div id="chart"></div>
+  <div id="tooltip">tooltip</div>
+  <div id="chart">
+
+  </div>
+
 </body>
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="index.js"></script>
