--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hello D3!</title>
   <style>
+    body{
+      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    }
     #nav {
       margin-left: 100px;
       margin-top: 50px;
@@ -14,13 +17,10 @@
     #tooltip {
       color: white;
       position: absolute;
-      text-align: center;
-      width: 60px;
-      height: 28px;
-      padding: 2px;
+      padding: 20px;
       font: 12px sans-serif;
+      border-radius: 4px;
       background: rgba(0, 0, 0, .8);
-      border: 2px solid black;
       pointer-events: none;
     }
   </style>
